# business_rules

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: main.py
backend/routers/: __init__.py  evaluation.py  rules.py  transactions.py
config/: rules_v1.yaml
docs/: ARCHITECTURE.md  HOW_TO_USE.md  three_stage_architecture.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  evaluation.ts  index.ts  rules.ts  transactions.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/flow-editor/: EvaluationOverlay.tsx  FlowCanvas.tsx  RuleEditPanel.tsx
frontend/src/components/flow-editor/nodes/: ConditionGroupNode.tsx  DecisionOutputNode.tsx  RuleNode.tsx  TransactionInputNode.tsx
frontend/src/hooks/: useFlowEditor.ts
frontend/src/pages/: DashboardPage.tsx  FlowEditorPage.tsx  TestRunnerPage.tsx
frontend/src/types/: flow.ts  index.ts
notebooks/: README.md  decision_engine.ipynb
src/business_rules/: __init__.py  data_generator.py  models.py  rule_engine.py
streamlit/: README.md  app.py
streamlit/pages/: 1_📊_Dashboard.py  2_🧪_Test_Transactions.py
